<resources>
    <!-- Global strings -->
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="error_occurred">An error occurred.</string>

    <!-- Google strings -->
    <string name="places_api_key" translatable="false">AIzaSyCLx5WO9P9hWujgs4CiEEmywSzWX7x97hM</string>
    <string name="places_web_services_api_key" translatable="false">AIzaSyClssA-rx1d2Wip2KBO25PQMQqAuM5IL0o</string>
    <string name="google_web_client_id" translatable="false">85975384709-li2l7j9tka4n65rhns737143njetjgkj.apps.googleusercontent.com</string>

    <!-- Facebook consumer key and secret -->
    <string name="facebook_application_id" translatable="false">1167955320007971</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1167955320007971</string>

    <!-- Twitter consumer key and secret -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">Zk3y1y4KRVv8TBOo5aMwn6P0j</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">nCSlzemjQGvAicvpGB8sMhQ0YgJxTvCRQKpvvRj0G5vNsBlzcY</string>

    <!-- GitHub consumer key and secret -->
    <string name="github_id" translatable="false">3e789217b2572a457a05</string>
    <string name="github_secret" translatable="false">e4a8d288ea52364c1bb87d71c96c62898bd186ed</string>
    <string name="github_app_url" translatable="false">go4lunch://github</string>


    <!-- Connection strings -->
    <string name="connection">Connection</string>
    <string name="connectionfail">Connection failed</string>
    <string name="email_and_password">Email and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="email_signin_fail">Failed to sign in and to sign up. Did you enter a valid e-mail address ?</string>
    <string name="disconnected">You have been successfully disconnected.</string>

    <!-- MainActivity strings -->
    <string name="list_placeholder">Use the search bar to find restaurants</string>
    <string name="no_workmate">No workmate selected this restaurant at the moment.</string>
    <string name="unselect_success">The restaurant has been successfully unselected</string>
    <string name="no_restaurant_selected">You didn\'t select any restaurant for today.</string>
    <string name="restaurant_map">Restaurant map</string>
    <string name="restaurant_list">Restaurant list</string>

    <!-- View names -->
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="people_view">Workmates</string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_lunch">YOUR LUNCH</string>
    <string name="item_settings">SETTINGS</string>
    <string name="item_logout">LOGOUT</string>

    <!-- Restaurant strings -->
    <string name="action_call">Call</string>
    <string name="action_like">Like</string>
    <string name="action_website">Website</string>
    <string name="RESTAURANT_VALUES" translatable="false">RESTAURANT_VALUES</string>
    <string name="RESTAURANT_CHANGE" translatable="false">RESTAURANT_CHANGE</string>
    <string name="text_workmate">%1$s is eating at %2$s</string>
    <string name="text_workmate_joining">%1$s is joining !</string>
    <string name="text_notdecided">%1$s hasn\'t decided yet</string>
    <string name="select_success">The restaurant has been successfully selected.</string>


    <!-- Notifications strings -->
    <string name="notifications">Notifications</string>
    <string name="notification_text">You\'re eating at %1$s with %2$d workmates</string>

    <!-- Parameters strings -->
    <string name="apply_changes">Apply changes</string>
    <string name="changes_success">Changes have been saved successfully.</string>
    <string name="display_name">Name :</string>
    <string name="picture_url">Picture URL :</string>
    <string name="openUntil">Open until %1$s</string>
    <string name="closeUntil">Close until %1$s</string>
    <string name="times_unavailable">Opening times unavailable</string>
    <string name="params_missing">One of the parameters is missing.</string>
    <string name="github_sign_in">Sign in with GitHub</string>
</resources>
