<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_item"
          android:title="Search"
          android:icon="@drawable/ic_search_black"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.widget.SearchView"/>
</menu>